build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef int32_t angularMode_t;
typedef mpz_t longInteger_t;
typedef struct {
  uint8_t bytes[16];
} decQuad;
typedef decQuad real34_t;
typedef struct {
  real34_t real;
  real34_t imag;
} complex34_t;
typedef struct {
  uint16_t matrixRows;
  uint16_t matrixColumns;
} matrixHeader_t;
typedef struct {
  matrixHeader_t header;
  real34_t matrixElements[4];
} real34Matrix_t;
typedef struct {
  matrixHeader_t header;
  complex34_t matrixElements[4];
} complex34Matrix_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
bool_t getRegisterAsReal(calcRegister_t reg, real_t *value);
bool_t getRegisterAsRealAngle(calcRegister_t reg, real_t *value, angularMode_t *angle_mode, bool_t reduce_longinteger_angle);
bool_t getRegisterAsComplex(calcRegister_t reg, real_t *real, real_t *imag);
bool_t getRegisterAsShortInt(calcRegister_t reg, bool_t *sign, uint64_t *val, bool_t *overflow, bool_t *fractional);
bool_t getFlag(uint16_t flag);
bool_t getRegisterAsLongInt(calcRegister_t reg, longInteger_t val, bool_t *fractional);
int getRegisterAsLongIntQuiet(calcRegister_t reg, longInteger_t val, bool_t *fractional);
bool_t fraction(calcRegister_t regist, int16_t *sign, uint64_t *intPart, uint64_t *numer, uint64_t *denom, int16_t *lessEqualGreater);
void convertLongIntegerRegisterToLongInteger(calcRegister_t reg, longInteger_t long_integer);
void convertShortIntegerRegisterToLongInteger(calcRegister_t reg, longInteger_t long_integer);
void convertLongIntegerRegisterToReal(calcRegister_t reg, real_t *real, realContext_t *real_context);
void convertLongIntegerRegisterToReal34Register(calcRegister_t source, calcRegister_t destination);
void setRegisterTag(calcRegister_t reg, uint32_t tag);
void convertLongIntegerToLongIntegerRegister(const longInteger_t long_integer, calcRegister_t regist);
void convertLongIntegerToShortIntegerRegister(const longInteger_t long_integer, uint32_t base, calcRegister_t regist);
void convertUInt64ToShortIntegerRegister(int16_t sign, uint64_t value, uint32_t base, calcRegister_t regist);
void convertShortIntegerRegisterToUInt64(calcRegister_t reg, int16_t *sign, uint64_t *value);
void convertShortIntegerRegisterToReal(calcRegister_t source, real_t *destination, realContext_t *real_context);
void convergenceTolerence(real_t *tol);
bool_t WP34S_RelativeError(const real_t *x, const real_t *y, const real_t *tol, realContext_t *realContext);
bool_t WP34S_AbsoluteError(const real_t *x, const real_t *y, const real_t *tol, realContext_t *realContext);
bool_t WP34S_ComplexRelativeError(const real_t *xReal, const real_t *xImag, const real_t *yReal, const real_t *yImag, const real_t *tol, realContext_t *realContext);
bool_t WP34S_ComplexAbsError(const real_t *xReal, const real_t *xImag, const real_t *yReal, const real_t *yImag, const real_t *tol, realContext_t *realContext);
void convertRealToResultRegister(const real_t *real, calcRegister_t dest, angularMode_t angle_mode);
void convertRealToLongIntegerRegister(const real_t *real, calcRegister_t dest, enum rounding roundingMode);
void convertReal34ToLongIntegerRegister(const real34_t *real, calcRegister_t dest, enum rounding roundingMode);
void real34RectangularToPolar(const real34_t *real, const real34_t *imag, real34_t *magnitude, real34_t *theta);
void convertComplexToResultRegister(const real_t *real, const real_t *imag, calcRegister_t dest);
void convertAngleFromTo(real_t *angle, angularMode_t fromAngularMode, angularMode_t toAngularMode, realContext_t *realContext);
void realPolarToRectangular(const real_t *magnitude,
                            const real_t *angle,
                            real_t *real,
                            real_t *imag,
                            realContext_t *real_context);
void realRectangularToPolar(const real_t *real,
                            const real_t *imag,
                            real_t *magnitude,
                            real_t *theta,
                            realContext_t *real_context);
void complexMagnitude(const real_t *real, const real_t *imag, real_t *magnitude, realContext_t *realContext);
bool_t getSystemFlag(int32_t flag);
void setSystemFlag(int32_t flag);
void clearSystemFlag(int32_t flag);
void fnSetFlag(int32_t flag);
void fnRefreshState(void);
void fnChangeBase(uint16_t base);
void forceSystemFlag(unsigned int sf, int set);
void displayCalcErrorMessage(uint8_t error_code, calcRegister_t err_message_register_line, calcRegister_t err_register_line);
void realNextToward(const real_t *x, const real_t *y, real_t *result, realContext_t *real_context);
const char *getRegisterDataTypeName(calcRegister_t reg, bool_t article, bool_t abbreviated);
void roundToSignificantDigits(const real_t *source, real_t *destination, int32_t digits, realContext_t *real_context);
void linkToComplexMatrixRegister(calcRegister_t reg, complex34Matrix_t *matrix);
void linkToRealMatrixRegister(calcRegister_t reg, real34Matrix_t *matrix);
bool_t realMatrixInit(real34Matrix_t *matrix, uint16_t rows, uint16_t columns);
bool_t complexMatrixInit(complex34Matrix_t *matrix, uint16_t rows, uint16_t columns);
void realMatrixFree(real34Matrix_t *matrix);
void complexMatrixFree(complex34Matrix_t *matrix);
void convertReal34MatrixToReal34MatrixRegister(const real34Matrix_t *matrix, calcRegister_t reg);
void convertComplex34MatrixToComplex34MatrixRegister(const complex34Matrix_t *matrix, calcRegister_t reg);
void convertReal34MatrixRegisterToReal34Matrix(calcRegister_t reg, real34Matrix_t *matrix);
void convertReal34MatrixRegisterToComplex34MatrixRegister(calcRegister_t source, calcRegister_t destination);
void convertReal34MatrixRegisterToComplex34Matrix(calcRegister_t reg, complex34Matrix_t *matrix);
void convertReal34MatrixToComplex34Matrix(const real34Matrix_t *real_matrix, complex34Matrix_t *complex_matrix);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
uint16_t realVectorSize(const real34Matrix_t *matrix);
void dotRealVectors(const real34Matrix_t *y, const real34Matrix_t *x, real34_t *res);
void crossRealVectors(const real34Matrix_t *y, const real34Matrix_t *x, real34Matrix_t *res);
uint16_t complexVectorSize(const complex34Matrix_t *matrix);
void dotComplexVectors(const complex34Matrix_t *y, const complex34Matrix_t *x, real34_t *res_r, real34_t *res_i);
void crossComplexVectors(const complex34Matrix_t *y, const complex34Matrix_t *x, complex34Matrix_t *res);
void setLastintegerBasetoZero(void);
void convertTimeRegisterToReal34Register(calcRegister_t source, calcRegister_t destination);
void convertReal34RegisterToTimeRegister(calcRegister_t source, calcRegister_t destination);