zig_src/mathematics/math_command_wrappers_runtime.zig


pub extern fn getRegisterAsReal(reg: calcRegister_t, value: ?*real_t) bool;
pub extern fn getRegisterAsRealAngle(reg: calcRegister_t, value: *real_t, angle_mode: *angularMode_t, reduce_longinteger_angle: bool) bool;
pub extern fn getRegisterAsComplex(reg: calcRegister_t, real: *real_t, imag: *real_t) bool;
pub extern fn getRegisterAsShortInt(reg: calcRegister_t, sign: ?*bool, val: ?*u64, overflow: ?*bool, fractional: ?*bool) bool;
pub extern fn getRegisterAsLongInt(reg: calcRegister_t, val: *mpz_struct, fractional: ?*bool) bool;
pub extern fn getRegisterAsLongIntQuiet(reg: calcRegister_t, val: *mpz_struct, fractional: ?*bool) c_int;
pub extern fn convertLongIntegerRegisterToLongInteger(reg: calcRegister_t, long_integer: *mpz_struct) void;
pub extern fn convertShortIntegerRegisterToLongInteger(reg: calcRegister_t, long_integer: *mpz_struct) void;
pub extern fn convertLongIntegerRegisterToReal(reg: calcRegister_t, real: *real_t, real_context: *realContext_t) void;
pub extern fn convertLongIntegerRegisterToReal34Register(source: calcRegister_t, destination: calcRegister_t) void;
pub extern fn convertTimeRegisterToReal34Register(source: calcRegister_t, destination: calcRegister_t) void;
pub extern fn convertReal34RegisterToTimeRegister(source: calcRegister_t, destination: calcRegister_t) void;
pub extern fn convertReal34ToLongIntegerRegister(real: *const real34_t, dest: calcRegister_t, rounding_mode: rounding_t) void;
pub extern fn convertLongIntegerToLongIntegerRegister(long_integer: *const mpz_struct, regist: calcRegister_t) void;
pub extern fn convertLongIntegerToShortIntegerRegister(long_integer: *const mpz_struct, base: u32, regist: calcRegister_t) void;
pub extern fn convertUInt64ToShortIntegerRegister(sign: i16, value: u64, base: u32, reg: calcRegister_t) void;
pub extern fn convertShortIntegerRegisterToUInt64(reg: calcRegister_t, sign: ?*i16, value: ?*u64) void;
pub extern fn convertShortIntegerRegisterToReal(source: calcRegister_t, destination: *real_t, real_context: *realContext_t) void;
pub extern fn convergenceTolerence(tol: *real_t) void;
pub extern fn WP34S_RelativeError(x: *const real_t, y: *const real_t, tol: *const real_t, real_context: *realContext_t) bool;
pub extern fn WP34S_AbsoluteError(x: *const real_t, y: *const real_t, tol: *const real_t, real_context: *realContext_t) bool;
pub extern fn WP34S_ComplexRelativeError(
    x_real: *const real_t,
    x_imag: *const real_t,
    y_real: *const real_t,
    y_imag: *const real_t,
    tol: *const real_t,
    real_context: *realContext_t,
) bool;
pub extern fn WP34S_ComplexAbsError(
    x_real: *const real_t,
    x_imag: *const real_t,
    y_real: *const real_t,
    y_imag: *const real_t,
    tol: *const real_t,
    real_context: *realContext_t,
) bool;
pub extern fn getFlag(flag: u16) bool;
pub extern fn getSystemFlag(flag: i32) bool;
pub extern fn setSystemFlag(flag: i32) void;
pub extern fn clearSystemFlag(flag: i32) void;
pub extern fn fnChangeBase(base: u16) void;
pub extern fn forceSystemFlag(sf: c_uint, set: c_int) void;
pub extern fn fnSetFlag(flag: i32) void;
pub extern fn fnRefreshState() void;
pub extern fn setLastintegerBasetoZero() void;
pub extern fn setRegisterTag(reg: calcRegister_t, tag: u32) void;
pub extern fn linkToComplexMatrixRegister(reg: calcRegister_t, matrix: *complex34Matrix_t) void;
pub extern fn linkToRealMatrixRegister(reg: calcRegister_t, matrix: *real34Matrix_t) void;
pub extern fn realMatrixInit(matrix: *real34Matrix_t, rows: u16, columns: u16) bool;
pub extern fn complexMatrixInit(matrix: *complex34Matrix_t, rows: u16, columns: u16) bool;
pub extern fn realMatrixFree(matrix: *real34Matrix_t) void;
pub extern fn complexMatrixFree(matrix: *complex34Matrix_t) void;
pub extern fn convertReal34MatrixToReal34MatrixRegister(matrix: *const real34Matrix_t, reg: calcRegister_t) void;
pub extern fn convertComplex34MatrixToComplex34MatrixRegister(matrix: *const complex34Matrix_t, reg: calcRegister_t) void;
pub extern fn convertReal34MatrixRegisterToReal34Matrix(reg: calcRegister_t, matrix: *real34Matrix_t) void;
pub extern fn convertReal34MatrixRegisterToComplex34Matrix(reg: calcRegister_t, matrix: *complex34Matrix_t) void;
pub extern fn convertReal34MatrixRegisterToComplex34MatrixRegister(source: calcRegister_t, destination: calcRegister_t) void;
pub extern fn convertReal34MatrixToComplex34Matrix(real_matrix: *const real34Matrix_t, complex_matrix: *complex34Matrix_t) void;
pub extern fn realVectorSize(matrix: *const real34Matrix_t) u16;
pub extern fn dotRealVectors(y: *const real34Matrix_t, x: *const real34Matrix_t, res: *real34_t) void;
pub extern fn crossRealVectors(y: *const real34Matrix_t, x: *const real34Matrix_t, res: *real34Matrix_t) void;
pub extern fn complexVectorSize(matrix: *const complex34Matrix_t) u16;
pub extern fn dotComplexVectors(y: *const complex34Matrix_t, x: *const complex34Matrix_t, res_r: *real34_t, res_i: *real34_t) void;
pub extern fn crossComplexVectors(y: *const complex34Matrix_t, x: *const complex34Matrix_t, res: *complex34Matrix_t) void;
pub extern fn displayCalcErrorMessage(error_code: u8, err_message_register_line: calcRegister_t, err_register_line: calcRegister_t) void;
pub extern fn getRegisterDataTypeName(reg: calcRegister_t, article: bool, abbreviated: bool) [*:0]const u8;
pub extern fn convertRealToResultRegister(real: *const real_t, dest: calcRegister_t, angle_mode: angularMode_t) void;
pub extern fn convertRealToLongIntegerRegister(real: *const real_t, dest: calcRegister_t, rounding_mode: rounding_t) void;
pub extern fn convertComplexToResultRegister(real: *const real_t, imag: *const real_t, dest: calcRegister_t) void;
pub extern fn fraction(regist: calcRegister_t, sign: *i16, int_part: *u64, numer: *u64, denom: *u64, less_equal_greater: *i16) bool;
pub extern fn convertAngleFromTo(angle: *real_t, from_angular_mode: angularMode_t, to_angular_mode: angularMode_t, real_context: *realContext_t) void;
pub extern fn mod2Pi(x: *const real_t, result: *real_t, real_context: *realContext_t) void;
pub extern fn real34RectangularToPolar(real: *const real34_t, imag: *const real34_t, magnitude: *real34_t, theta: *real34_t) void;
pub extern fn roundToSignificantDigits(source: *const real_t, destination: *real_t, digits: i32, real_context: *realContext_t) void;
pub extern fn realPolarToRectangular(
    magnitude: *const real_t,
    angle: *const real_t,
    real: *real_t,
    imag: *real_t,
    real_context: *realContext_t,
) void;
pub extern fn realRectangularToPolar(
    real: *const real_t,
    imag: *const real_t,
    magnitude: *real_t,
    theta: *real_t,
    real_context: *realContext_t,
) void;
pub extern fn realNextToward(x: *const real_t, y: *const real_t, result: *real_t, real_context: *realContext_t) void;
pub extern fn complexMagnitude(real: *const real_t, imag: *const real_t, magnitude: *real_t, real_context: *realContext_t) void;
